# visc-lib

./: .clang-format  CMakeLists.txt  LICENSE
include/visc/: c_api.h  core.hpp  encoder.hpp  matrix.hpp  scheme.hpp
src/: c_api.cpp  encoder.cpp  matrix.cpp  scheme.cpp
